--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -156,6 +156,9 @@ main{
         border-radius: 10px;
         padding: 6px;
     }
+    .btn-margin{
+        margin-bottom: 20px;
+    }
 }
 // end of create post page styles
 
