Updates to controls in create page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -158,6 +158,9 @@ main{
     }
     .btn-margin{
         margin-bottom: 20px;
+        input{
+            margin-right: 10px;
+        }
     }
 }
 // end of create post page styles
