--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,12 @@
 a{
     text-decoration: none;
 }
-
+.inline{
+    display: inline;
+}
+textarea{
+    resize: none;
+}
 ul{
     list-style-type: none;
     margin: 0px;
@@ -50,6 +55,7 @@ main{
 }
 .ul-footer{
     display: flex;
+    font-weight: 300;
     padding: 0px 10px;
     justify-content: space-between;
 }
@@ -96,7 +102,7 @@ main{
       }
       .dropdown-content a {
         padding: 5px 8px;
-        font-size: 20px;
+        font-size: 13px;
         color: $primary;
         font-weight: bold;
         display: block;
@@ -121,18 +127,6 @@ main{
     margin-bottom: 20px;
 }
 
-.cos-btn{
-    background: transparent;
-    font-size: 16px;
-    padding: 6px;
-    border-radius: 10px;
-    border: 1px solid $primary;
-    &:hover{
-        background-color: $secondary;
-        color: #fff;
-    }
-}
-
 .li-posts{
     color: #fff;
     padding: 10px;
@@ -155,13 +149,13 @@ main{
     .info{
         text-align: justify;
         text-justify: inter-word;
-        max-width: 45%;
-        .user-img{
-            max-width: 50px;
-            height: 50px;
-            border-radius: 20px;
-            margin-right: 10px;
-        }
+        max-width: 39%;
+    }
+    .user-img{
+        max-width: 50px;
+        height: 50px;
+        border-radius: 20px;
+        margin-right: 10px;
     }
     .post-img{
         max-width: 600px;
@@ -174,7 +168,15 @@ main{
     .post-date, .post-author{
         font-size: 12px;
     }
-
+    .controls{
+        display: flex;
+        justify-content: flex-start;
+        a{
+            margin-right: 10px;
+        }
+        margin-top: 10px;
+        align-items: right;
+    }
 }
 // end of home page styles
 
@@ -193,9 +195,6 @@ main{
     .label{
         font-size: 20px;
         font-weight: bold;
-    }
-    .form-btn{
-        width: 100px;
     }
     .input-file{
         width: 210px;
@@ -236,10 +235,10 @@ main{
 .image-div{
     display: flex;
     margin-bottom: 10px;
+    justify-content: center;
     .img{
-        flex: 1;
-        height: 30%;
-        width: 30%;
+        height: 75%;
+        width: 100%;
         border-radius: 20px;
         border: 1px solid;
         box-shadow: 5px 5px;
@@ -288,6 +287,10 @@ main{
             padding: 6px;
             resize: none;
         }
+    }
+
+    .comment-btn{
+        margin-bottom: 10px;
     }
 
     .commentors{
@@ -348,8 +351,8 @@ main{
     justify-content: space-between;
     margin-bottom: 20px;
     .user-img{
-        width: 90px;
-        height: 90px;
+        width: 100px;
+        height: 100px;
         border-radius: 20px;
     }
     .user-img-div{
@@ -366,7 +369,7 @@ main{
       .dropdown-content {
         display: none;
         position: absolute;
-        left: 29px;
+        left: 32px;
         bottom: 35px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
@@ -388,16 +391,6 @@ main{
     }
     .user-nav{
         margin-bottom: 10px;
-        margin-right: 20px;
-        a{
-            font-size: 18px;
-        }
-        a:nth-child(1){
-            margin-right: 10px;
-        }
-        a:nth-child(2){
-            margin-right: 10px;
-        }
     }
     .hidden-img-input{
         display: none;
@@ -409,6 +402,7 @@ main{
     background: #e5e5e5;
     border-radius: 10px;
     padding: 10px;
+    margin-bottom: 10px;
     h5, h6{ 
         display: inline;
     }
@@ -447,13 +441,6 @@ main{
         justify-content: space-between;
         margin-bottom: 20px;
     }
-    .input-field{
-        border-radius: 6px;
-    }
-    .input-label{
-        font-weight: bold;
-        font-size: 16px;
-    }
 }
 // End of User-Info-Change Styles
 
@@ -465,6 +452,22 @@ main{
     }
     .posts{
         flex-direction: column-reverse;
+        .post-date, .post-author{
+            font-size: 10px;
+        }
+        .info{
+            max-width: 100%;
+        }
+        .post-title{
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .user-img{
+            max-width: 32px;
+            height: 32px;
+            border-radius: 20px;
+            margin-right: 10px;
+        }
     }
     .ul-footer{
         li{
@@ -474,6 +477,7 @@ main{
     .posts > div{
         flex: 1;
     }
+
 }
 
     @media only screen and (max-width: 923px){
@@ -494,7 +498,7 @@ main{
         @media only screen and (max-width: 440px){
         .ul-footer{
             li{
-                font-size: 11px;
+                font-size: 8px;
             }
         }
 }
